@@ -1,5 +1,7 @@
 2017-11-XX Jan Kotanski <jan.kotanski@desy.de>
 	* add ROIs and sync with MG
+	* add ZMQ security stream
+	* add lavuemonitor
 	* add add messagebox
 	* add Tango source
 	* add Test source
